<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@color/text_color"
            android:text="@string/tarih" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:autofillHints="date"
            android:hint="@string/hint_date"
            android:inputType="date"
            android:maxWidth="160dp"
            android:minWidth="120dp"
            android:textColor="@color/text_color"
            android:textColorHint="#616161" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:autofillHints="none"
            android:hint="@string/hint_description"
            android:inputType="text"
            android:textColor="@color/text_color"
            android:textColorHint="#616161" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/editTextAmount"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:autofillHints="none"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal"
            android:textColor="@color/text_color"
            android:textColorHint="#616161" />
    </LinearLayout>

</LinearLayout>