<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:hint="@string/hint_description"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/hint_amount"
        android:importantForAutofill="yes"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonSaveTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"/>
</LinearLayout>